--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-07-03  Nick Clifton  <nickc@cygnus.com>
+
+	* config/arm/arm.md: Fix post increment and pre increment
+	peepholes so that they do not generate UNPREDICATBLE opcodes.
+	(ie ones where the increment clobbers the source/destination).
+
 2000-07-01  Marek Michalkiewicz  <marekm@linux.org.pl>
 
 	* config/avr/avr.c (out_adj_frame_ptr): Make "frame pointer
