* builtins.c (get_memory_rtx): Always put into alias set 0.
	* gcc.c-torture/execute/20000703-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34849 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/execute/20000703-1.c: New test.
+
 2000-07-03  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.old-deja/g++.pt (lookup10.C): New test.
