--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* builtins.c (get_memory_rtx): Always put into alias set 0.
+
 2000-07-03  Nick Clifton  <nickc@cygnus.com>
 
 	* config/arm/arm.md: Fix post increment and pre increment
