--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2000-07-03  Jakub Jelinek  <jakub@redhat.com>
 
+	* config/i386/i386.md (movstrictqi_xor): Use 'q' constraint instead
+	of 'r'. Use q_regs_operand.
+	(andsi_1+2): Use q_regs_operand.
+
+2000-07-03  Jakub Jelinek  <jakub@redhat.com>
+
 	* builtins.c (get_memory_rtx): Always put into alias set 0.
 
 2000-07-03  Nick Clifton  <nickc@cygnus.com>
