--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -1853,7 +1853,7 @@
    (set_attr "mode" "QI")])
 
 (define_insn "*movstrictqi_xor"
-  [(set (strict_low_part (match_operand:QI 0 "register_operand" "=r"))
+  [(set (strict_low_part (match_operand:QI 0 "q_regs_operand" "+q"))
 	(match_operand:QI 1 "const0_operand" "i"))
    (clobber (reg:CC 17))]
   "reload_completed && (!TARGET_USE_MOV0 || optimize_size)"
@@ -5000,7 +5000,7 @@
   "operands[1] = gen_lowpart (HImode, operands[0]);")
 
 (define_split
-  [(set (match_operand:SI 0 "register_operand" "")
+  [(set (match_operand:SI 0 "q_regs_operand" "")
 	(and:SI (match_dup 0)
 		(const_int -256)))
    (clobber (reg:CC 17))]
