--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-03  Geoff Keating  <geoffk@cygnus.com>
+
+	* expmed.c (expand_mult_highpart): Use op1 instead of wide_op1 when
+	mode instead of wider_mode is being used.
+
 2000-07-03  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/i386/i386.md (movstrictqi_xor): Use 'q' constraint instead
