* calls.c (emit_library_call_value_1): Use valreg instead 	of hard_libcall_value.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34854 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jul  3 16:53:43 2000  Clinton Popetz  <cpopetz@cygnus.com>
+
+	* calls.c (emit_library_call_value_1): Use valreg instead
+	of hard_libcall_value.
+
 2000-07-03  Geoff Keating  <geoffk@cygnus.com>
 
 	* config/rs6000/rs6000.c (rs6000_emit_move): New function.
