* frame.h (frame_state): Move base_offset to end.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34864 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-04  Jason Merrill  <jason@redhat.com>
+
+	* frame.h (frame_state): Move base_offset to end.
+
 Mon Jul  3 21:31:43 2000  Clinton Popetz  <cpopetz@cygnus.com>
 
 	* calls.c (emit_library_call_value_1): Revert previous change.
