* cpplex.c: Fix trigraph replacement within strings. 	* gcc.dg/cpp/lexident.c, gcc.dg/cpp/lexnum.c, 	  gcc.dg/cpp/lexstrng.c: New tests.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34868 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-05  Neil Booth  <NeilB@earthling.net>
+
+	* cpplex.c: Fix trigraph replacement within strings.
+
 2000-07-04  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* rs6000/aix.h (ASM_GENERATE_INTERNAL_LABEL): Fix format specifier.
