* gjavah.c (HANDLE_METHOD): Call print_method_info with a NULL 	stream argument on the first pass for CNI as well as JNI.         (print_method_info): Set up method name on the first pass only.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34869 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2000-07-02  Bryce McKinlay  <bryce@albatross.co.nz>
+
+        * gjavah.c (HANDLE_METHOD): Call print_method_info with a NULL stream
+        argument on the first pass for CNI as well as JNI.
+        (print_method_info): Set up method name on the first pass only.
+	
 2000-06-29  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* jcf-write.c (push_long_const): Appropriately cast short negative
