* cpplib.c (_cpp_parse_assertion): Fix buffer overrun.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34872 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-05  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* cpplib.c (_cpp_parse_assertion): Fix buffer overrun.
+
 2000-07-04  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* cpplex.c: Don't include sys/mman.h.
