* gcc.dg/cpp/ident.c: Don't expect #ident strings in the 	assembly output.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34873 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-05  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* gcc.dg/cpp/ident.c: Don't expect #ident strings in the
+	assembly output.
+
 2000-07-04  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* gcc.dg/cpp/ident.c: New test.
