--- a/libf2c/ChangeLog
+++ b/libf2c/ChangeLog
@@ -1,5 +1,8 @@
-2000-07-02  Toon Moene  <toon@moene.indiv.nluug.nl>
+2000-07-03  Donn Terry  (donnte@microsoft.com)
+        * libU77/aclocal.m4: check for 2 argument gettimeofday without
+	struct timezone
 
+2000-07-02  Toon Moene  <toon@moene.indiv.nluug.nl>
 	* libF77/Version.c: Bumped version number to 0.5.26.
 	* libI77/Version.c: Ditto.
 	* libU77/Version.c: Ditto.
