--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-05  Jason Merrill  <jason@redhat.com>
+
+	* call.c (joust): Don't complain about `operator char *()' beating
+	`operator const char *() const'.
+
 2000-07-04  scott snyder  <snyder@fnal.gov>
 	    Jason Merrill  <jason@redhat.com>
 
