--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-05  Rodney Brown  <RodneyBrown@pmsc.com>
+
+	* invoke.texi: Fix minor typos
+	* md.texi: Fix minor typos
+
 2000-07-05  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* cpplib.c (_cpp_parse_assertion): Fix buffer overrun.
