Fix glibc 2.2 build failure from fr reunification patch. 	* config/ia64/ia64.h (HARD_REGNO_MODE_OK): If FR_REGNO_P, disallow 	CCmode.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34881 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-05  Jim Wilson  <wilson@cygnus.com>
+
+	* config/ia64/ia64.h (HARD_REGNO_MODE_OK): If FR_REGNO_P, disallow
+	CCmode.
+
 2000-07-05  Rodney Brown  <RodneyBrown@pmsc.com>
 
 	* invoke.texi: Fix minor typos
