--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-07-05  Kazu Hirata  <kazu@hxi.com>
+
+	* h8300-proto.h: Fix formatting.
+	* h8300.c: Likewise.
+	* h8300.h: Likewise.
+
 2000-07-05  Jim Wilson  <wilson@cygnus.com>
 
 	* config/ia64/ia64.h (HARD_REGNO_MODE_OK): If FR_REGNO_P, disallow
