* timevar.c: [HAVE_SYS_RESOURCE_H]: Include <sys/resource.h>. 	[NEED_DECLARATION_GETRUSAGE]: Declare getrusage.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34884 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-06  Hans-Peter Nilsson  <hp@axis.com>
+
+	* timevar.c: [HAVE_SYS_RESOURCE_H]: Include <sys/resource.h>.
+	[NEED_DECLARATION_GETRUSAGE]: Declare getrusage.
+
 2000-07-05  Kazu Hirata  <kazu@hxi.com>
 
 	* h8300-proto.h: Fix formatting.
