--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-06  Neil Booth  <NeilB@earthling.net>
+
+	* cpplib.c: (_cpp_parse_assertion):  Perform hash lookups
+	based on full length of predicate.
+
 2000-07-06  Hans-Peter Nilsson  <hp@axis.com>
 
 	* timevar.c: [HAVE_SYS_RESOURCE_H]: Include <sys/resource.h>.
