* pt.c (tsubst): Don't layout type, if it's error_mark.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34888 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,9 @@
 2000-07-06  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* pt.c (tsubst): Don't layout type, if it's error_mark.
+
+2000-07-06  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* pt.c (instantiate_pending_templates): Reset template level.
 
 2000-07-05  Jason Merrill  <jason@redhat.com>
