--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2000-07-06  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* g++.old-deja/g++.pt/instantiate7.C: New test.
+
+2000-07-06  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* g++.old-deja/g++.mike/thunk2.C: Add return 0.
 	* g++.old-deja/g++.mike/thunk3.C: Likewise.
 	* g++.old-deja/g++.other/rtti3.C: Likewise.
