--- a/libstdc++/ChangeLog
+++ b/libstdc++/ChangeLog
@@ -1,3 +1,9 @@
+2000-07-06  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* std/gslice_array.h, std/indirect_array.h, std/mask_array.h,
+	std/slice_array.h, std/std_valarray.h, std/valarray_meta.h:
+	Do not paste anything after 'operator' keyword.
+
 2000-05-15  David Edelsohn  <edelsohn@gnu.org>
 
 	* Makefile.in: Change "pic" to depend on $(PICFLAG), not
