* reload.c (push_reload): When seeing if can reuse a register, 	check extra registers against widest of INMODE and OUTMODE.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34891 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jul  6 18:30:36 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* reload.c (push_reload): When seeing if can reuse a register,
+	check extra registers against widest of INMODE and OUTMODE.
+
 2000-07-06  Neil Booth  <NeilB@earthling.net>
 
 	* cpplib.c: (_cpp_parse_assertion):  Perform hash lookups
