* fold-const.c (fold): Fix a comment typo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34899 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-07  Kazu Hirata  <kazu@hxi.com>
+
+	* fold-const.c (fold): Fix a comment typo.
+
 2000-07-07  Neil Booth  <NeilB@earthling.net>
 
 	* cpp.texi: Update to new lexer.
