--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-07  Phil Edwards  <pme@sourceware.cygnus.com>
+
+	* symlink-tree:  Check number of arguments.
+
 2000-07-05  Jim Wilson  <wilson@cygnus.com>
 
 	* Makefile.in (CXX_FOR_TARGET): Add libstdc++ to the library
