--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jul  7 07:47:35 2000  Jeffrey A Law  (law@cygnus.com)
+
+	* final.c (final): Detect out of bounds array access to
+	the insn_lengths array.
+
 2000-07-07  Kazu Hirata  <kazu@hxi.com>
 
 	* fold-const.c (fold): Fix a comment typo.
