2000-07-07  Andrew Haley  <aph@cygnus.com>
	* cplus-dem.c (main): fflush() after emitting last char before
	waiting for input.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34902 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-07  Andrew Haley  <aph@cygnus.com>
+
+	* cplus-dem.c (main): fflush() after emitting last char before
+	waiting for input.
+
 2000-06-28  Alex Samuel  <samuel@codesourcery.com>
 
 	* cp-demangle.c (demangle_encoding): Accept no substitutions.
